--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity
             android:name=".OnboardingActivity"
             />
+        <activity android:name=".LoginActivity" />
 
     </application>
 
