--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
 
         <activity android:name=".OnboardingActivity" />
         <activity android:name=".LoginActivity" />
+        <activity android:name=".screen.HomeActivity" />
+
 
     </application>
 
