Remember me option saving User in local DB for the next sign in

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
 
         <activity android:name=".OnboardingActivity" />
         <activity android:name=".LoginActivity" />
-        <activity android:name=".screen.HomeActivity" />
+        <activity android:name=".test.HomeActivity" />
 
 
     </application>
