--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,9 @@
 
         <activity android:name=".OnboardingActivity" />
         <activity android:name=".LoginActivity" />
-        <activity android:name=".test.HomeActivity" />
+        <activity
+            android:name=".HomeActivity"
+            android:exported="true" />
 
 
     </application>
