--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".OnboardingActivity" />
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".screen.OnboardingActivity" />
+        <activity android:name=".screen.LoginActivity" />
         <activity
             android:name=".HomeActivity"
             android:exported="true" />
